# tryCI

./: .gitignore  LICENSE  main.py  pyproject.toml
.github/workflows/: ci.yml  hello.yml  manual.yml
